--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
               <p>Copywright 2020 Bella Onojie.com</p>
             </div>
           </div>
+          <script src="JS/script.js"></script>
     </body>
     </html>
     
